--- a/src/Components/Canvas.css
+++ b/src/Components/Canvas.css
@@ -1,6 +1,7 @@
 .container{
-    background-color:#2e2e2e;
-    height:"100%";
     justify-content:"center";
     align-items:"center";
+    height:100%;
+    width: 100%;
+    background-color:#2e2e2e;
 }
