--- a/src/Components/PhoneEntry.css
+++ b/src/Components/PhoneEntry.css
@@ -2,9 +2,9 @@
   border-width: 1;
   background-color: "#ffff";
   height: 40;
-  width: 200;
-  margin-bottom: 10;
+  bottom: 10;
   text-align: "center";
   border-radius: 10;
-  margin: 10;
+  margin: 20;
+  width: 200;
 }
