--- a/src/Components/ComplementarText.module.css
+++ b/src/Components/ComplementarText.module.css
@@ -1,6 +1,8 @@
 .container{
-    text-align:"center";
-    margin-left:20;
-    margin-right: 20;
-    margin-bottom:15;
-}
+    font-family: 'Poppins';
+    text-align:center;
+    margin-left:20px;
+    font-size: 14px;
+    margin-right: 20px;
+    cursor: pointer;
+} 
