--- a/src/Components/Container.module.css
+++ b/src/Components/Container.module.css
@@ -1,9 +1,10 @@
 .container {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   max-width: 400px;
-  height: 120px;
+  height: auto;
   background-color: #fff;
   border-radius: 10px;
 }
