--- a/src/Components/EmailEntry.module.css
+++ b/src/Components/EmailEntry.module.css
@@ -1,10 +1,8 @@
 .container {
-  border-width: 1;
   background-color: "#ffff";
-  height: 40;
-  margin-bottom: 10;
-  text-align: "center";
-  border-radius: 10;
-  margin: 20;
-  width: 200;
+  text-align: center;
+  height: 30px;
+  border-radius: 5px;
+  margin-bottom: 5px;
+  margin-top: 5px;
 }
