--- a/src/Components/EmailEntry.module.css
+++ b/src/Components/EmailEntry.module.css
@@ -1,8 +1,8 @@
-.container {
+.EmailEntry {
   background-color: "#ffff";
   text-align: center;
   height: 30px;
   border-radius: 5px;
   margin-bottom: 5px;
-  margin-top: 5px;
+  margin-top: "5px";
 }
