--- a/src/Views/Login.module.css
+++ b/src/Views/Login.module.css
@@ -3,3 +3,15 @@
     justify-content: center;
     align-items: center;
 }
+
+.remembermeCheck{
+    margin-top: 20px;
+}
+.remembermeLabel{
+    font-family: Poppins;
+}
+.link{
+    text-decoration: none;
+    color: black;
+    margin-top: 10px;
+}
