Arrumando o componente sidebar e removendo o header para melhor ajustar a sidebar, adicionando o primeiro item, o icone do app, que levará à página principal

--- a/src/Components/Sidebar.module.css
+++ b/src/Components/Sidebar.module.css
@@ -1,18 +1,15 @@
 .sidebar{
+    display: flex;
     flex-direction: column;
-    margin-left: 0px;
-    width: 35px;
-    background-color: black;
+    align-items:center ;
+    justify-content: start;
+    width: 80px;
+    background-color:#2e2e2e;
     height: 100vh;
-    justify-content: center;
-    align-items: center;
-    margin-top: 0;
 }
-.sidebar div{
-    background-color: white;
-    width: 10px;
-    height: 10px;
-    justify-content: center;
-    margin-left: 10px;
-    border-radius: 5px;
+.sidebarItem {
+    display: flex;
+    width: 50px;
+    height: 50px;
+    margin-top: 30px;
 }
