Adicionando e ajustando o componente sidebar

--- a/src/Components/Sidebar.module.css
+++ b/src/Components/Sidebar.module.css
@@ -4,12 +4,18 @@
     align-items:center ;
     justify-content: start;
     width: 80px;
-    background-color:#2e2e2e;
+    background-color:#2e2e2e45;
     height: 100vh;
 }
+
+.sidebar :nth-child() {
+    margin-bottom: 30px;
+}
+
 .sidebarItem {
     display: flex;
     width: 50px;
     height: 50px;
     margin-top: 30px;
+    cursor: pointer;
 }
