--- a/src/Components/Sidebar.module.css
+++ b/src/Components/Sidebar.module.css
@@ -1,21 +1,25 @@
-.sidebar{
-    display: flex;
-    flex-direction: column;
-    align-items:center ;
-    justify-content: start;
-    width: 80px;
-    background-color:#2e2e2e45;
-    height: 100vh;
+.sidebar {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: start;
+  width: 8%;
+  background-color: #2e2e2e45;
+  height: 100vh;
 }
 
-.sidebar :nth-child() {
-    margin-bottom: 30px;
+.sidebarLogo {
+  margin-top: 40px;
+  margin-bottom: 50px;
+  height: 50px;
+  width: 50px;
 }
 
 .sidebarItem {
-    display: flex;
-    width: 50px;
-    height: 50px;
-    margin-top: 30px;
-    cursor: pointer;
+  display: flex;
+  cursor: pointer;
+  height: 40px;
+  width: 40px;
+  margin-top: 40px;
 }
+
