--- a/frontend/src/pages/calendar/styles.css
+++ b/frontend/src/pages/calendar/styles.css
@@ -33,7 +33,6 @@
   width: 80%;
   height: 80%;
   min-width: 175px;
-  min-height: 250px;
   max-width: 80%;
   max-height: 80%;
   cursor: pointer;
@@ -138,6 +137,22 @@
   width: 100%;
   max-width: 720px;
   max-height: 716px;
+}
+
+.container-hours {
+  background-color: var(--grey);
+  margin-left: auto;
+  margin-right: auto;
+  width: 80%;
+  cursor: pointer;
+}
+
+td {
+  border-radius: 8px;
+  border-color: rgb(56, 78, 48);
+  border-style: solid;
+  width: 133px;
+  height: 71px;
 }
 
 @media (max-width: 1000px) {
