--- a/src/Views/Ficha.module.css
+++ b/src/Views/Ficha.module.css
@@ -1,31 +1,58 @@
-input{
-    margin-left: 15px;
-    width: auto;
+*{
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
 }
 
-.logo {
-    margin-top: 1em;
-    width: min-content;
-    height: min-content;
+html{
+    height: 100vh;
 }
+
+.sidebar li{
+    list-style: none;
+    display: block;
+}
+
+.calendar{
+    background-image: url("../Assets/img/CalendarIcon.png");
+    width: 50px;
+    height: 50px;
+}
+
+.patient{
+    background-image: url("../Assets/img/PatientIcon.png");
+    width: 50px;
+    height: 50px;
+}
+
+.balance{
+    background-image: url("../Assets/img/MoneyIcon.png");
+    width: auto;
+    height: auto;
+}
+
+.settings{
+    background-image: url("../Assets/img/SettingsIcon.png");
+    width: 50px;
+    height: 50px;
+}
+
 
 .sidebarImage {
     width: 50px;
     height: 50px;
 }
 
-.sidebar div ::clic{
-    background-color: aqua;
+.Logo{
+    margin-bottom:35px ;
 }
 
-.calendarIcon{
-    width: 50px;
-    height: 50px;
-    margin-top: 20px;
+.CalendarIcon {
+margin-bottom: -15px;
 }
 
 
-.patientIcon{
+.patientIcon {
     margin-top: -10px;
     width: 50px;
     height: 50px;
@@ -108,74 +135,69 @@ input{
     border-bottom: 0.5px solid black;
 }
 
+.formInfosPessoais{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: baseline;
+    height: 100vh;
+    margin-left: 15px;
+    margin-top: 20px;
+}
+
+.formGroup{
+    display: flex;
+    margin-bottom: 35px;
+}
+
+.formGroup input[type=text]{
+    width: 70vw
+}
+
+.formGroup input[type=date]{
+    margin-right: 5px;
+}
+
+.formGroup select{
+    width: 140px
+}
+
+.btnCancel{
+    background-color: #A3A3A3;
+    color: #fff;
+    border: none;
+    height: 50px;
+    width: 80px;
+    border-radius: 10px;
+}
+
+.btnContinue{
+    background-color: #6A8795;
+    color: #fff;
+    border: none;
+    height: 50px;
+    width: 80px;
+    border-radius: 10px;
+}
+
+.formGroup label{
+    margin-right: 5px;
+}
+
+
 .stepNameHighlight h4 {
     text-align: center;
     margin-top: 10px;
     margin-bottom: 10px;
 }
 
-.formInfosPessoais {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-}
-.w100{
-    width: 100%;
-}
-.w50{
-    width: 50%;
-}
-.w33{
-    width: 33.333%;
-}
-.row{
-    display: flex;
-    flex-direction: row;
-}
-.column{
-    display: flex;
-    flex-direction: column;
-}
-.formInfosPessoais{
-    width: 100%;
-    display: flex;
-    align-items: stretch;
-}
-
-.formGroup{
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    align-items: stretch;
-}
 .fichaFooter{
     display: flex;
-    justify-content: center;
-    align-items: start;
-}
-
-.sendButton{
-    height: 54px;
-    width: 128px;
-    background-color: #a3a3a3;
-    border-radius: 10px;
-}
-.cancelButton{
-    height: 54px;
-    width: 128px;
-    background-color: #a3a3a3;
-    border-radius: 10px;
-}
-.nextButton{
-    height: 54px;
-    width: 128px;
-    background-color: #6A8795;
-    border-radius: 10px;
+    flex-direction: row;
+    justify-content: space-around;
+    margin-bottom: 10px;
 }
 .progress{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    align-self: center;
 }
